# AuroraHeart

./: .gitignore  CLAUDE.md  Cargo.toml  Design.md  claudecode.txt  clippy.toml  deny.toml  generate_icons.py
crates/aurora-agent/: Cargo.toml
crates/aurora-agent/examples/: agent_integration.rs
crates/aurora-agent/src/: agent.rs  client.rs  conversation.rs  directives.rs  lib.rs  tools.rs
crates/aurora-agent/src/tools/: executor.rs  mod.rs
crates/aurora-core/: Cargo.toml
crates/aurora-core/src/: command.rs  config.rs  crypto.rs  error.rs  file_io.rs  hooks.rs  lib.rs  plugin.rs  project.rs  types.rs
crates/aurora-ui/: Cargo.toml  tauri.conf.json
crates/aurora-ui/src/: main.rs  terminal.rs
crates/aurora-ui/src-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
crates/aurora-ui/src-ui/public/: manifest.json
crates/aurora-ui/src-ui/src/: App.jsx  Terminal.jsx  index.css
crates/aurora-ui/ui/: main.slint  theme.slint
docs/: agent_definition_example.toml
docs/commands/: code-review.md  commit-push-pr.md  docs.md  explain.md  refactor.md  tests.md
docs/hooks/: README.md  after-tool-call-example.ps1  after-tool-call-example.sh  before-tool-call-example.ps1  before-tool-call-example.sh  session-start-example.ps1  session-start-example.sh
