[workspace]
resolver = "2"
members = [
    "crates/aurora-core",
    "crates/aurora-ui",
    "crates/aurora-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AuroraHeart Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/auroraheart"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.5"
insta = "1.41"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
