[package]
name = "aurora-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Cryptography for credential storage
aes-gcm.workspace = true
ring.workspace = true
base64.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

# File system operations
dirs = "5.0"

[dev-dependencies]
proptest.workspace = true
tempfile = "3.14"
