[package]
name = "aurora-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Aurora crates
aurora-core = { path = "../aurora-core" }
aurora-agent = { path = "../aurora-agent" }

# Slint UI framework
slint = "1.9"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
futures = "0.3"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
slint-build = "1.9"

[[bin]]
name = "auroraheart"
path = "src/main.rs"
