[package]
name = "aurora-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Aurora crates
aurora-core = { path = "../aurora-core" }
aurora-agent = { path = "../aurora-agent" }

# Tauri
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
futures = "0.3"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "auroraheart"
path = "src/main.rs"
